# programming-game

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  WEB_ARCHITECTURE_PLAN.md
.github/workflows/: build-vscode-extension.yml  publish-racehub-image.yml
bot/: Cargo.toml  build.rs  link.x
bot/.cargo/: config  config.toml
bot/src/: devices.rs  driving.rs  lib.rs  main.rs
bot/src/devices/: driving.rs  log.rs  radar.rs
botracers-game/src/: lib.rs  race_runtime.rs  ui.rs
emulator/: Cargo.toml
emulator/core/: Cargo.toml
emulator/core/src/: cpu.rs  dram.rs  lib.rs  main.rs
emulator/core/src/cpu/: instruction.rs
emulator/game/src/: cpu.rs  main.rs
emulator/racing/: Cargo.toml
emulator/racing/assets/: track1.toml
emulator/racing/src/: main.rs  track.rs
emulator/src/: bevy.rs  cpu.rs  dram.rs  lib.rs  main.rs  tui.rs
emulator/src/cpu/: instruction.rs
emulator/src/tui/: widgets.rs
emulator/tui/: Cargo.toml
emulator/tui/src/: tui.rs
emulator/tui/src/tui/: widgets.rs
game/: Cargo.toml
game/src/: cpu.rs  main.rs
race-connector/: Cargo.toml
race-connector/src/: main.rs
race-protocol/: Cargo.toml
race-protocol/src/: lib.rs
racehub/: Cargo.toml
racehub/src/: lib.rs  main.rs
racing/: Cargo.toml
racing/assets/: .gitignore  spielberg.csv  spielberg.toml
racing/src/: devices.rs  lib.rs  main.rs  track.rs  track_format.rs  ui.rs
racing/src/devices/: car_controls.rs  car_radar.rs  car_state.rs  spline_query.rs  track_radar.rs
scripts/: build_web.sh  serve_web.sh
vscode-extension/: README.md  package-lock.json  package.json
vscode-extension/src/: api.ts  auth.ts  bootstrap.ts  build.ts  config.ts  extension.ts  types.ts  workspace.ts
vscode-extension/src/views/: loginWebview.ts  racehubView.ts
vscode-extension/templates/bot-starter/: Cargo.toml  link.x
vscode-extension/templates/bot-starter/.cargo/: config.toml
vscode-extension/templates/bot-starter/src/: driving.rs  lib.rs  log.rs
