[workspace]
members = ["racing", "emulator", "race-protocol", "racehub"]
resolver = "3"
exclude = ["bot"]


# Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable a small amount of optimizations for the emulator in debug mode, otherwise we have 1 fps
[profile.dev.package.emulator]
opt-level = 1
