[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "bottles"
path = "src/bin/bottles.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "car"
path = "src/bin/car.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "car_radar"
path = "src/bin/car_radar.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "straight"
path = "src/bin/straight.rs"
test = false
doctest = false
bench = false

[dependencies]
botracers-bot-sdk = { path = "../botracers-bot-sdk" }
