[package]
name = "emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.27.0"
elf = "0.7"
ratatui = "0.26.1"
tracing = "0.1"
tracing-subscriber = "0.3"
