[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = "0.13.1"
bevy_rapier2d = "0.25.0"
iyes_perf_ui = "0.2.3"
noise = "0.9.0"
emulator = { path = "../emulator" }
