[package]
name = "race-connector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "race-connector"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
toml = "0.8"
race-protocol = { path = "../race-protocol" }
