[package]
name = "racing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "racing"
path = "src/main.rs"

[[bin]]
name = "track-editor"
path = "src/bin/editor.rs"

[dependencies]
avian2d = "0.4.1"
bevy = "0.17"
iyes_perf_ui = { git = "https://github.com/mgi388/iyes_perf_ui", branch = "bevy-0.17" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rfd = "0.15"
