[package]
name = "racing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "racing"
path = "src/main.rs"

[[bin]]
name = "track-editor"
path = "src/bin/editor.rs"

[dependencies]
avian2d = "0.5.0"
bevy = "0.18"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rfd = "0.15"

emulator = { path = "../emulator" }
