[package]
name = "racing"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "racing"
path = "src/main.rs"

[[bin]]
name = "track-editor"
path = "src/bin/editor.rs"

[dependencies]
avian2d = "0.5.0"
bevy = { version = "0.18", default-features = false, features = ["2d"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rfd = "0.15"
ehttp = { version = "0.6", features = ["json"] }

emulator = { path = "../emulator" }
race-protocol = { path = "../race-protocol" }
